<resources>
    <string name="app_name">SportsForAll</string>
    <string name="title_home">My Games</string>
    <string name="nav_menu_host">Host</string>
    <string name="title_host">Host a Game</string>
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">login</string>
    <string name="top_label_find">Find a Game</string>
    <string name="bottom_label_find">Find</string>

    <!--  host games -->
    <string name="host_hint_search_location">Search for a Location</string>
    <string name="host_selected_location">Location</string>
    <string name="host_game_information">Game Information</string>
    <string name="host_hint_game_title">Game Title</string>
    <string name="host_help_game_title">e.g. Soccer for All Skills</string>
    <string name="host_hint_sport">Select a Sport</string>
    <string name="host_hint_date">Select Date</string>
    <string name="host_hint_time">Select Start Time</string>
    <string name="host_hint_duration_hour">hours</string>
    <string name="host_hint_duration_minute">minutes</string>
    <string name="host_duration_suffix_hour">hours</string>
    <string name="host_duration_suffix_minute">minutes</string>
    <string name="host_hint_participant_count">Number of Participants</string>
    <string name="host_hint_description">Rules Description</string>
    <string name="host_help_duration">Game Duration</string>
    <string name="host_button_host_game">Save</string>

    <!--  game types  -->
    <string name="type_soccer">Soccer</string>
    <string name="type_basketball">Basketball</string>
    <string name="type_ultimate_frisbee">Ultimate</string>
    <string name="type_all">All</string>

    <!--  filter toolbar  -->
    <string name="date_filter_hint">Date</string>
    <string name="time_filter_hint">Starting Time</string>
    <string name="distance_filter_hint">Distance</string>
    <string name="distance_filter_unit">km</string>
    <string name="match_type_filter_hint">Match Type</string>

    <!-- game details view -->
    <string name="team_one">Team 1</string>
    <string name="team_two">Team 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Notification Channel -->
    <string name="match_rating_notification_channel_id">notifyRating</string>
    <string name="match_rating_notification_channel_name">SFAMatchRatingChannel</string>
    <string name="match_rating_notification_channel_description">Channel for SFA match rating reminder</string>
    <string name="submit_ratings">Submit Ratings</string>
    <string name="number_of_ratings">0</string>
    <string name="number_of_ratings_label">Number of Ratings:</string>


</resources>