<?xml version="1.0" encoding="utf-8"?>
<!-- match filtering toolbar -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_game_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbar_game_filter_type_distance"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:hint="@string/match_type_filter_hint"
            app:errorEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/match_type_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:padding="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:hint="@string/distance_filter_hint"
            app:suffixText="@string/distance_filter_unit"
            app:suffixTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_filter_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:paddingVertical="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolbar_game_filter_date_time"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:hint="@string/date_filter_hint"
            app:errorEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_filter_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:padding="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:hint="@string/time_filter_hint"
            app:errorEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_filter_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="time"
                android:padding="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>