<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/user_profile_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sportsforall_background" />

    <TextView
        android:id="@+id/user_profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_background" />

     <RatingBar
         android:id="@+id/user_profile_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_profile_username"
         android:progressTint="@color/purple_500"
         android:progressBackgroundTint="@color/grey"/>

    <TextView
        android:id="@+id/number_of_ratings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_ratings_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/user_profile_rating"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_rating" />

    <TextView
        android:id="@+id/user_profile_number_of_ratings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:text="@string/number_of_ratings"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/number_of_ratings_label"
        app:layout_constraintTop_toTopOf="@+id/number_of_ratings_label" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
