<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.host.details.HostDetailsFragment">

        <TextView
            android:id="@+id/host_text_selected_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            android:text="@string/host_selected_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/host_card_selected_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_text_selected_location">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/host_selected_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/host_selected_location_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/host_text_game_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="20sp"
            android:text="@string/host_game_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_card_selected_location" />

        <LinearLayout
            android:id="@+id/host_game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_text_game_information">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_host_title_24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/host_layout_game_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:hint="@string/host_hint_game_title"
                app:helperText="@string/host_help_game_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <EditText
                    android:id="@+id/host_input_game_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/host_input_game_sport"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/host_game_sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_game_title">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_host_sport_24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/host_layout_game_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:hint="@string/host_hint_sport"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/host_input_game_sport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/host_game_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_game_sport">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_host_date_24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/host_layout_game_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                app:endIconTint="@color/black"
                android:hint="@string/host_hint_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <EditText
                    android:id="@+id/host_input_game_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/host_game_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_game_date">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_host_time_24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/host_layout_game_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:hint="@string/host_hint_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <EditText
                    android:id="@+id/host_input_game_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/host_participant_count"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/host_game_time">-->

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:src="@drawable/ic_host_people_24dp"/>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/host_layout_participant_count"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:nextFocusForward="@+id/host_input_description"-->
<!--                android:hint="@string/host_hint_participant_count"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                >-->

<!--                <EditText-->
<!--                    android:id="@+id/host_input_participant_count"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center_vertical"-->
<!--                    android:inputType="number"/>-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/host_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_game_time">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_host_description_24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:hint="@string/host_hint_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <EditText
                    android:id="@+id/host_input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:gravity="top"
                    android:layout_gravity="center_vertical" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/host_button_host"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/host_button_host_game"
            android:textColor="@color/white"
            android:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_description"
            style="@style/Widget.MaterialComponents.Button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


